# face_auth

./: .gitignore  CHEATSHEET.md  README.md
app/: Cargo.toml  README.md  config.yaml
app/src/: config.rs  image_utils.rs  lib.rs  login.rs  main.rs  register.rs
app/src/camera/: mod.rs
app/src/embeddings/: embeddings.rs  utils.rs
app/src/image_utils/: imagenet.rs
app/src/storage/: local_file.rs  mod.rs  qdrant_storage.rs  vector_storage.rs
camera_server/: README.md  camera_stream_api.py  config.env  requirements.txt  test_camera.py
workshop/: Cargo.toml  README.md
workshop/ex01_image_processing/: Cargo.toml  README.md
workshop/ex01_image_processing/src/: lib.rs
workshop/ex02_embeddings/: Cargo.toml  README.md
workshop/ex02_embeddings/src/: lib.rs
workshop/ex03_similarity/: Cargo.toml  README.md
workshop/ex03_similarity/src/: lib.rs
workshop/ex04_storage_local/: Cargo.toml  README.md
workshop/ex04_storage_local/src/: lib.rs
workshop/ex05_retrieval/: Cargo.toml  README.md
workshop/ex05_retrieval/src/: lib.rs
workshop/ex06_full_app/: Cargo.toml  README.md
workshop/ex06_full_app/src/: camera.rs  config.rs  login.rs  main.rs  storage.rs
workshop/ex06_full_app/src/camera/: camera_interactions.rs
workshop/ex06_full_app/src/embeddings/: utils.rs
workshop/ex06_full_app/src/image_utils/: imagenet.rs
workshop/ex06_full_app/src/storage/: local_file_vector_storage.rs
workshop/solution/ex01_image_processing/: Cargo.toml
workshop/solution/ex01_image_processing/src/: lib.rs
workshop/solution/ex02_embeddings/: Cargo.toml
workshop/solution/ex02_embeddings/src/: lib.rs
workshop/solution/ex03_similarity/: Cargo.toml
workshop/solution/ex03_similarity/src/: lib.rs
workshop/solution/ex04_storage_local/: Cargo.toml
workshop/solution/ex04_storage_local/src/: lib.rs
workshop/solution/ex05_retrieval/: Cargo.toml
workshop/solution/ex05_retrieval/src/: lib.rs
