[package]
name = "face-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
candle-core = "0.9.1"
anyhow = "1.0"
clap = { version = "4.5.42", features = ["derive"] }
candle-nn = "0.9.1"
hf-hub = "0.4.3"
candle-transformers = "0.9.1"
image = "0.25.6"
minifb = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dotenv = "0.15"