[workspace]
members = [
    "ex01_image_processing",
    "ex02_embeddings",
    "ex03_similarity",
    "ex04_storage_local",
    "ex05_retrieval",
]

resolver = "2"

# Workspace-level dependencies that can be shared by all members
[workspace.dependencies]
# Core ML/AI dependencies
candle-core = "0.9.1"
candle-nn = "0.9.1" 
candle-transformers = "0.9.1"
hf-hub = "0.4.3"

[profile.dev.package.gemm-f16]
opt-level = 3


# Image processing
image = "0.25.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Vector database
qdrant-client = "1.7"

# Utilities
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
rand = "0.8"

# Testing
criterion = "0.5"
