[workspace]
resolver = "2"
members = [
    "ex01_image_processing",
    "ex02_embeddings", 
    "ex03_similarity",
    "ex04_storage_local",
    "ex05_retrieval",
    "ex06_full_app",
    "solution/ex01_image_processing",
    "solution/ex02_embeddings",
    "solution/ex03_similarity", 
    "solution/ex04_storage_local",
    "solution/ex05_retrieval"
]

# Shared dependencies across all exercises
[workspace.dependencies]
anyhow = "1.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Solution crates as workspace dependencies
ex01_image_processing_solution = { path = "solution/ex01_image_processing" }
ex02_embeddings_solution = { path = "solution/ex02_embeddings" }
ex03_similarity_solution = { path = "solution/ex03_similarity" }
ex04_storage_local_solution = { path = "solution/ex04_storage_local" }
ex05_retrieval_solution = { path = "solution/ex05_retrieval" }


# Optimization for faster builds
[profile.dev.package.gemm-f16]
opt-level = 3

[profile.dev]
# Faster linking
split-debuginfo = "unpacked"
