[package]
name = "ex02_embeddings"
version = "0.1.0"
edition = "2021"

[profile.dev.package.gemm-f16]
opt-level = 3

[dependencies]
anyhow = "1.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
hf-hub = "0.4.3"
candle-transformers = "0.9.1"
image = "0.25.6"
ex01_image_processing_solution = { path = "../solution/ex01_image_processing" }


