[package]
name = "ex02_embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
hf-hub = { workspace = true }
candle-transformers = { workspace = true }
image = { workspace = true }
ex01_image_processing_solution = { path = "../solution/ex01_image_processing" }


