[package]
name = "ex04_storage_local"
version = "0.1.0"
edition = "2021"

[profile.dev.package.gemm-f16]
opt-level = 3

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }


