[package]
name = "ex05_retrieval"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.41"
uuid = { version = "1.0", features = ["v4"] }
ex04_storage_local_solution = { path = "../solution/ex04_storage_local" }
ex03_similarity_solution = { path = "../solution/ex03_similarity" }



