[package]
name = "face-auth-workshop"
version = "0.1.0"
edition = "2024"

[[example]]
name = "storage_demo"
path = "examples/storage_demo.rs"

[dependencies]
# Use workspace dependencies where available
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Exercise-specific dependencies not in workspace
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.5.42", features = ["derive"] }
minifb = "0.28.0"
serde_yaml = "0.9"
dotenv = "0.15"
lazy_static = "1.4"
