[package]
name = "ex05_retrieval_solution"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
candle-core = { workspace = true }

ex03_similarity_solution = { path = "../ex03_similarity" }
ex04_storage_local_solution = { path = "../ex04_storage_local" }
uuid = { workspace = true }
